[metadata]
name = dockyard
version = 0.0.2
author = Nick Grundl
author_email = "Nick Grundl" <nicholasgrundl@gmail.com>
maintainer = Nick Grundl
maintainer_email = "Nick Grundl" <nicholasgrundl@gmail.com>
description = Python package for Backend API
license = Apache License 2.0
url = https://github.com/NicholasGrundl/dockmaster

[options]
packages_dir = 
	=src
packages = find:
include_package_data = True
install_requires =
	#general
	httpx
	click
	isodate
	python-dotenv
	
	#datamodel
	pydantic
	pydantic-settings
	
	#service
	fastapi[standard]
	uvicorn[standard]
	
	#wiz lights
	# pywizlight
	# nest_asyncio
	# netifaces

[options.package_data]
* = *.json, *.yaml, *.csv

[options.packages.find]
where=src

[flake8]
max-line-length = 100

[isort]
multi_line_output = 3
force_single_line = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[coverage:run]
branch = True
